[gd_scene load_steps=3 format=3 uid="uid://dp4umc3lj5fhc"]

[ext_resource type="Script" path="res://UserInterface/EscMenu/EscMenu.gd" id="1_87fm5"]

[sub_resource type="Theme" id="Theme_h42t6"]

[node name="EscMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_87fm5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -972.0
offset_top = -557.0
offset_right = 972.0
offset_bottom = 550.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -50.5
offset_right = 265.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SaveGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitToMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"

[node name="ExitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="Options" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.5
offset_top = -167.0
offset_right = 287.5
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Options"]
layout_mode = 2
theme = SubResource("Theme_h42t6")

[node name="Res Label" type="Label" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Resolution"

[node name="Res Button" type="OptionButton" parent="Options/VBoxContainer2"]
layout_mode = 2
selected = 2
item_count = 5
popup/item_0/text = "3840x2160"
popup/item_1/text = "2560x1440"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3
popup/item_4/text = "800x600"
popup/item_4/id = 4

[node name="Screen Type Label" type="Label" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Screen Type"

[node name="Screen Type" type="OptionButton" parent="Options/VBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Fullscreen"
popup/item_1/text = "Windowed"
popup/item_1/id = 1
popup/item_2/text = "Borderless Window"
popup/item_2/id = 2

[node name="CheckButton" type="CheckButton" parent="Options/VBoxContainer2"]
visible = false
layout_mode = 2
button_pressed = true
text = "Full Screen"

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 425

[node name="FPS Label" type="Label" parent="Options/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "FPS"

[node name="FPS Toggle" type="CheckButton" parent="Options/VBoxContainer2/HBoxContainer"]
visible = false
layout_mode = 2
text = "Show FPS"

[node name="FPS" type="OptionButton" parent="Options/VBoxContainer2"]
layout_mode = 2
item_count = 5
popup/item_0/text = "30"
popup/item_1/text = "60"
popup/item_1/id = 1
popup/item_2/text = "120"
popup/item_2/id = 2
popup/item_3/text = "144"
popup/item_3/id = 3
popup/item_4/text = "240"
popup/item_4/id = 4

[node name="Quality Label" type="Label" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Quality"

[node name="Quality Button" type="OptionButton" parent="Options/VBoxContainer2"]
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "High"
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Low"
popup/item_2/id = 2

[node name="Sound Label" type="Label" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Sound Level"

[node name="HSlider" type="HSlider" parent="Options/VBoxContainer2"]
layout_mode = 2
max_value = 4.0
step = 0.1
value = 1.0

[node name="Close Button" type="Button" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="item_selected" from="Options/VBoxContainer2/Res Button" to="." method="_on_res_button_item_selected"]
[connection signal="item_selected" from="Options/VBoxContainer2/Screen Type" to="." method="_on_screen_type_item_selected"]
[connection signal="toggled" from="Options/VBoxContainer2/HBoxContainer/FPS Toggle" to="." method="_on_fps_toggle_toggled"]
[connection signal="item_selected" from="Options/VBoxContainer2/FPS" to="." method="_on_fps_item_selected"]
[connection signal="value_changed" from="Options/VBoxContainer2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Options/VBoxContainer2/Close Button" to="." method="_on_close_button_pressed"]
